upgrade sboot 3.1